# my_phillips_hue

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  app.py  aula.py  controlles.py  docker-compose.yml  factories.py  main.py  note.ipynb  pyproject.toml  readme.md  run.sh  setups.py
.res/: light_physical_locations.json  light_positions.json  setups.json
docs/: API.md  ARCHITECTURE.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  CONFIGURATION.md  IMPROVEMENT_PLAN.md  LOGGING_EXAMPLES.md  PHASE_1_2_COMPLETED.md  PHASE_2.1_COMPLETION.md  PHASE_3.3_COMPLETION.md  PHASE_4_2_SUMMARY.md  TEST_FOUNDATION_SUMMARY.md  phase_4_2_verification.sh
marvin_hue/: basics.py  colors.py  config.py  controllers.py  eye_safety.py  factories.py  factories_new.py  logging_config.py  screen_mirror.py  setup_builder.py  setups.py  setups_backup.py  setups_deprecated.py  utils.py
marvin_hue/api/: __init__.py  dependencies.py  models.py  websockets.py
marvin_hue/api/routes/: __init__.py  chat.py  configurations.py  mirror.py  positions.py  status.py
marvin_hue/chat/: __init__.py
marvin_hue/chat/agents/: __init__.py  react_agent.py
marvin_hue/chat/middleware/: eye_safety.py  hue_context.py
marvin_hue/chat/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  groq_provider.py  openai_provider.py  registry.py  xai_provider.py
marvin_hue/chat/subagents/: definitions.py  task.py
marvin_hue/chat/tools/: __init__.py  light_tools.py
scripts/: convert_setups_to_json.py  smoke_chat.py
tests/: README.md  __init__.py  conftest.py  test_api.py  test_basics.py  test_colors.py  test_config.py  test_controller_eye_safety.py  test_controller_public_api.py  test_controllers.py  test_setup_builder.py  test_utils.py
tests/chat/: conftest.py  test_builder.py  test_characterization.py  test_checkpointer_injection.py  test_eye_safety_middleware.py  test_groq_provider.py  test_hitl_optional.py  test_hue_context_middleware.py  test_light_tools_closures.py  test_light_tools_factory.py  test_orchestrator_build.py  test_orchestrator_integration.py  test_provider_factory_registry.py  test_providers_create_model.py  test_session_isolation.py  test_subagent_definitions.py  test_task_tool.py
tests/eval/: invariants.json  test_invariants.py
web/static/: index.js  mirror.js  positions.js
web/templates/: chat.html  index.html  mirror.html  positions.html
