[project]
name = "hue"
version = "0.1.0"
description = ""
authors = [{ name = "Marcus Braga", email = "mvbraga@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "phue>=1.1",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-xai>=1.1.0",
    "langchain-anthropic>=1.2.0",
    "langgraph>=1.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marvin_hue"]
