[project]
name = "hue"
version = "0.1.0"
description = ""
authors = [{ name = "Marcus Braga", email = "mvbraga@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "phue>=1.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "jupyter>=1.1.1",
    "mss>=10.2.0",
    "pillow>=12.2.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
    "langchain>=1.3.8",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langchain-xai>=1.2.2",
    "langchain-anthropic>=1.4.5",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marvin_hue"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=marvin_hue",
    "--cov-report=html",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "phue.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mss.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true

[tool.ruff]
# Exclude deprecated and example files from linting
exclude = [
    "aula.py",
    "marvin_hue/factories.py",
    "marvin_hue/setups.py",
    "marvin_hue/setups_backup.py",
    "marvin_hue/setups_deprecated.py",
]

[tool.ruff.lint]
# Ignore E402 (imports after non-import code) - needed for dotenv loading
ignore = ["E402", "F403", "F405"]
